firewall/iptables.up.rules
# Generated by iptables-save v1.8.4 on Wed Nov  5 23:11:17 2025
*nat
:PREROUTING ACCEPT [28:1184]
:INPUT ACCEPT [28:1184]
:OUTPUT ACCEPT [58:4340]
:POSTROUTING ACCEPT [58:4340]
-A POSTROUTING -s 192.168.41.0/24 -o ens3 -j MASQUERADE
-A POSTROUTING -s 192.168.42.0/24 -o ens3 -j MASQUERADE
-A POSTROUTING -s 192.168.43.0/24 -o ens3 -j MASQUERADE
COMMIT
# Completed on Wed Nov  5 23:11:17 2025
# Generated by iptables-save v1.8.4 on Wed Nov  5 23:11:17 2025
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p udp -m state --state NEW -m udp --dport 444 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 444 -j ACCEPT
-A FORWARD -m string --string "get_peers" --algo bm --to 65535 -j DROP
-A FORWARD -m string --string "announce_peer" --algo bm --to 65535 -j DROP
-A FORWARD -m string --string "find_node" --algo bm --to 65535 -j DROP
-A FORWARD -m string --string "BitTorrent" --algo bm --to 65535 -j DROP
-A FORWARD -m string --string "BitTorrent protocol" --algo bm --to 65535 -j DROP
-A FORWARD -m string --string "peer_id=" --algo bm --to 65535 -j DROP
-A FORWARD -m string --string ".torrent" --algo bm --to 65535 -j DROP
-A FORWARD -m string --string "announce.php?passkey=" --algo bm --to 65535 -j DROP
-A FORWARD -m string --string "torrent" --algo bm --to 65535 -j DROP
-A FORWARD -m string --string "announce" --algo bm --to 65535 -j DROP
-A FORWARD -m string --string "info_hash" --algo bm --to 65535 -j DROP
COMMIT
# Completed on Wed Nov  5 23:11:17 2025
